// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SubmissionItem Failure 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  padding: 8px 0;
}

.c2 {
  font-weight: bold;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
        data-journal-code="example"
      >
        Example Journal
      </div>
      <div
        className="SubmissionItem__StatusMessage-sc-8qvef2-2"
      >
        There was an error submitting this manuscript.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubmissionItem Submitting 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  padding: 8px 0;
}

.c2 {
  font-weight: bold;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
        data-journal-code="example"
      >
        Example Journal
      </div>
      <div
        className="SubmissionItem__StatusMessage-sc-8qvef2-2"
      >
        Submitting…
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubmissionItem Success 1`] = `
.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  padding: 8px 0;
}

.c2 {
  font-weight: bold;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
        data-journal-code="example"
      >
        Example Journal
      </div>
      <div
        className="SubmissionItem__StatusMessage-sc-8qvef2-2"
      >
        Submitted successfully.
      </div>
      1 minute ago
    </div>
  </div>
</div>
`;
